# SteelRain

./: README.md
DESK_app/: app.py  start.sh
DESK_app/widgets/: __init__.py  horizont.py  info.py
quadro/: package.xml  setup.cfg  setup.py
quadro/quadro/: camera.py  coder.py  decoder.py  main.py
quadro_ext/: CMakeLists.txt  package.xml
quadro_ext/src/: coder.cpp  decoder.cpp  receiver.cpp
quadro_interface/: CMakeLists.txt  package.xml
quadro_interface/srv/: BinaryCoder.srv  BinaryDecoder.srv  Coder.srv  Decoder.srv  Decoderbin.srv
